--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,26 +11,25 @@
         "lint:fix": "eslint . --fix && npx stylelint . --fix"
     },
     "dependencies": {
-        "@carrismetropolitana/eslint": "2024.5.1717005180",
-        "@mantine/carousel": "^7.10.0",
-        "@mantine/charts": "7.10.0",
-        "@mantine/core": "7.10.0",
-        "@mantine/dates": "7.10.0",
-        "@mantine/form": "7.10.0",
-        "@mantine/hooks": "7.10.0",
-        "@mantine/modals": "7.10.0",
+        "@carrismetropolitana/eslint": "2024.5.1717005279",
+        "@mantine/carousel": "7.10.1",
+        "@mantine/charts": "7.10.1",
+        "@mantine/core": "7.10.1",
+        "@mantine/dates": "7.10.1",
+        "@mantine/form": "7.10.1",
+        "@mantine/hooks": "7.10.1",
+        "@mantine/modals": "7.10.1",
         "@rajesh896/broprint.js": "2.1.1",
         "@tabler/icons-react": "3.5.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.11",
-        "deck.gl": "9.0.16",
-        "embla-carousel-react": "7.1.0",
+        "deck.gl": "9.0.17",
         "inflected": "2.1.0",
         "jsonwebtoken": "9.0.2",
         "luxon": "3.4.4",
         "maplibre-gl": "4.3.2",
-        "mongodb": "6.6.2",
-        "mongoose": "8.4.0",
+        "mongodb": "6.7.0",
+        "mongoose": "8.4.1",
         "next": "14.2.3",
         "next-intl": "3.14.1",
         "nodemailer": "6.9.13",
@@ -38,7 +37,6 @@
         "react-dom": "18.3.1",
         "react-map-gl": "7.1.7",
         "sharp": "0.33.4",
-        "swiper": "^11.1.3",
         "swr": "2.2.5",
         "ua-parser-js": "1.0.38",
         "yup": "1.4.0"
