--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "NodeNext",
     "paths": {
 			"@/utils/*": ["utils/*"],
+			"@/hooks/*": ["hooks/*"],
       "@/styles/*": ["styles/*"],
       "@/contexts/*": ["contexts/*"],
       "@/opengraph/*": ["opengraph/*"],
