--- a/videowall/package.json
+++ b/videowall/package.json
@@ -3,7 +3,7 @@
   "version": "2024.06.19-1715",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -18,7 +18,7 @@
     "luxon": "3.4.4",
     "mongodb": "6.7.0",
     "next": "14.2.4",
-    "next-intl": "3.15.0",
+    "next-intl": "3.15.2",
     "papaparse": "5.4.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,7 +27,7 @@
     "tunnel-ssh": "5.1.2"
   },
   "devDependencies": {
-    "@types/node": "20.14.5",
+    "@types/node": "20.14.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "typescript": "5.4.5"
