--- a/videowall/package.json
+++ b/videowall/package.json
@@ -3,7 +3,7 @@
   "version": "2024.06.19-1741",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev -p 3003 --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
