--- a/videowall/package.json
+++ b/videowall/package.json
@@ -23,6 +23,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sharp": "0.33.4",
+    "ssh2": "1.15.0",
     "swr": "2.2.5",
     "tunnel-ssh": "5.1.2"
   },
