--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
 
-  "editor.tabSize": 2,
+  "editor.tabSize": 4,
 
   "files.eol": "\n",
 
   "eslint.workingDirectories": ["./frontend"],
 
   // Enable the ESlint flat config support
-  "eslint.experimental.useFlatConfig": true,
+  "eslint.useFlatConfig": true,
 
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
