--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "@carrismetropolitana/website-frontend",
-  "version": "2024.06.20-1715",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3002",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix && npx stylelint . --fix"
-  },
-  "dependencies": {
-    "@carrismetropolitana/eslint": "2024.6.1717593318",
-    "@mantine/carousel": "7.10.2",
-    "@mantine/charts": "7.10.2",
-    "@mantine/core": "7.10.2",
-    "@mantine/dates": "7.10.2",
-    "@mantine/form": "7.10.2",
-    "@mantine/hooks": "7.10.2",
-    "@mantine/modals": "7.10.2",
-    "@rajesh896/broprint.js": "2.1.1",
-    "@tabler/icons-react": "3.6.0",
-    "@turf/turf": "7.0.0",
-    "dayjs": "1.11.11",
-    "embla-carousel-wheel-gestures": "8.0.1",
-    "inflected": "2.1.0",
-    "luxon": "3.4.4",
-    "maplibre-gl": "4.4.1",
-    "next": "14.2.4",
-    "next-intl": "3.15.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-map-gl": "7.1.7",
-    "sharp": "0.33.4",
-    "swr": "2.2.5",
-    "ua-parser-js": "1.0.38",
-    "yup": "1.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.14.6",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "postcss": "8.4.38",
-    "postcss-preset-mantine": "1.15.0",
-    "postcss-simple-vars": "7.0.1",
-    "typescript": "5.4.5"
-  }
+	"name": "@carrismetropolitana/website-frontend",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 3002",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix && npx stylelint . --fix"
+	},
+	"dependencies": {
+		"@carrismetropolitana/eslint": "2024.6.1717593318",
+		"@mantine/carousel": "7.10.2",
+		"@mantine/charts": "7.10.2",
+		"@mantine/core": "7.10.2",
+		"@mantine/dates": "7.10.2",
+		"@mantine/form": "7.10.2",
+		"@mantine/hooks": "7.10.2",
+		"@mantine/modals": "7.10.2",
+		"@rajesh896/broprint.js": "2.1.1",
+		"@tabler/icons-react": "3.6.0",
+		"@turf/turf": "7.0.0",
+		"dayjs": "1.11.11",
+		"embla-carousel-wheel-gestures": "8.0.1",
+		"inflected": "2.1.0",
+		"luxon": "3.4.4",
+		"maplibre-gl": "4.4.1",
+		"next": "14.2.4",
+		"next-intl": "3.15.2",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-map-gl": "7.1.7",
+		"sharp": "0.33.4",
+		"swr": "2.2.5",
+		"ua-parser-js": "1.0.38",
+		"yup": "1.4.0"
+	},
+	"devDependencies": {
+		"@types/node": "20.14.6",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
+		"postcss": "8.4.38",
+		"postcss-preset-mantine": "1.15.0",
+		"postcss-simple-vars": "7.0.1",
+		"typescript": "5.4.5"
+	}
 }
