--- a/videowall/package.json
+++ b/videowall/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "@carrismetropolitana/website-videowall",
-  "version": "2024.06.20-1715",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3003 --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix && npx stylelint . --fix"
-  },
-  "dependencies": {
-    "@carrismetropolitana/eslint": "2024.6.1717593318",
-    "@mantine/charts": "7.10.2",
-    "@mantine/core": "7.10.2",
-    "@mantine/hooks": "7.10.2",
-    "@tabler/icons-react": "3.6.0",
-    "dotenv": "16.4.5",
-    "luxon": "3.4.4",
-    "mongodb": "6.7.0",
-    "next": "14.2.4",
-    "next-intl": "3.15.2",
-    "papaparse": "5.4.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "recharts": "2.12.7",
-    "sharp": "0.33.4",
-    "ssh2": "1.15.0",
-    "swr": "2.2.5",
-    "tunnel-ssh": "5.1.2"
-  },
-  "devDependencies": {
-    "@types/node": "20.14.6",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "postcss": "8.4.38",
-    "postcss-preset-mantine": "1.15.0",
-    "postcss-simple-vars": "7.0.1",
-    "typescript": "5.4.5"
-  },
-  "browser": {
-    "crypto": false,
-    "cpu-features": false
-  }
+	"name": "@carrismetropolitana/website-videowall",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 3003 --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix && npx stylelint . --fix"
+	},
+	"dependencies": {
+		"@carrismetropolitana/eslint": "2024.6.1717593318",
+		"@mantine/charts": "7.10.2",
+		"@mantine/core": "7.10.2",
+		"@mantine/hooks": "7.10.2",
+		"@tabler/icons-react": "3.6.0",
+		"dotenv": "16.4.5",
+		"luxon": "3.4.4",
+		"mongodb": "6.7.0",
+		"next": "14.2.4",
+		"next-intl": "3.15.2",
+		"papaparse": "5.4.1",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"recharts": "2.12.7",
+		"sharp": "0.33.4",
+		"ssh2": "1.15.0",
+		"swr": "2.2.5",
+		"tunnel-ssh": "5.1.2"
+	},
+	"devDependencies": {
+		"@types/node": "20.14.6",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
+		"postcss": "8.4.38",
+		"postcss-preset-mantine": "1.15.0",
+		"postcss-simple-vars": "7.0.1",
+		"typescript": "5.4.5"
+	},
+	"browser": {
+		"crypto": false,
+		"cpu-features": false
+	}
 }
