--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
 		"@mantine/form": "7.10.2",
 		"@mantine/hooks": "7.10.2",
 		"@mantine/modals": "7.10.2",
+		"@piotr-cz/swr-idb-cache": "^1.0.3",
 		"@rajesh896/broprint.js": "2.1.1",
 		"@tabler/icons-react": "3.6.0",
 		"@turf/turf": "7.0.0",
 		"dayjs": "1.11.11",
 		"embla-carousel-wheel-gestures": "8.0.1",
+		"fuse.js": "^7.0.0",
 		"inflected": "2.1.0",
 		"luxon": "3.4.4",
 		"maplibre-gl": "4.4.1",
@@ -31,6 +33,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-map-gl": "7.1.7",
+		"react-virtualized": "^9.22.5",
 		"sharp": "0.33.4",
 		"swr": "2.2.5",
 		"ua-parser-js": "1.0.38",
@@ -40,6 +43,7 @@
 		"@types/node": "20.14.6",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/react-virtualized": "^9.21.30",
 		"postcss": "8.4.38",
 		"postcss-preset-mantine": "1.15.0",
 		"postcss-simple-vars": "7.0.1",
